--- a/style.css
+++ b/style.css
@@ -62,21 +62,21 @@
 }
 
 .color-1 {
-
+  background-color: cadetblue;
 }
 
 .color-2 {
-
+  background-color: red;
 }
 
 .color-3 {
-
+  background-color: yellow;
 }
 
 .color-4 {
-
+  background-color: green;
 }
 
 .color-5 {
-
+  background-color: white;
 }
